--- a/index/02-chap2.Rmd
+++ b/index/02-chap2.Rmd
@@ -42,12 +42,10 @@ Diseases affecting the heart and blood vessels are the major cause of mortality 
 Risk factors have often been identified through observational associations. Observational studies are often limited by bias, confounding and reverse causation. Mendelian randomisation (MR) is a technique which exploits the random assortment of alleles to estimate the causal association between a modifiable risk factor and disease outcomes. It can be likened to a natural randomised control trial (RCT)[@Gill2020]. This technique is widely implemented due to the availability of genetic data in large cohorts, such as in ~500,000 UK Biobank participants[@Bycroft2018]. An example of how MR and RCTs can be used to determine causality is shown in Figure \@ref(fig:MR-statins), using low density lipoproteins-cholesterol (LDL-C) and cardiovsacular events as an example[@Bennett2017]. Here, single nucleotide polymorphisms (SNPs) that are associated with levels of LDL-C can be used. These SNPs should also not be associated with other confounding factors such as smoking. If people with SNPs which lower LDL-C also have lower rates of cardiovascular events, it is likely that the relationship between LDL-C and cardiovascular events is causal. Although a useful technique in exploring causality, MR has its own biases and therefore other lines of evidence and study designs such as RCTs are required.
 
 (ref:scaption-MR-statins) Mendelian randomisation example using LDL levels and cardiovascular events
-(ref:caption-MR-statins) **Example of how Mendelian randomisation and a randomised control trial can be used to determine whether lowering levels of low density lipoproteins can decrease risk of cardiovascular events**. 
+(ref:caption-MR-statins) **Example of how Mendelian randomisation and a randomised control trial can be used to determine whether lowering levels of low density lipoproteins can decrease risk of cardiovascular events**. Figure from Bennett et al.[@Bennett2017].
 ```{r MR-statins, echo = FALSE, fig.cap="(ref:caption-MR-statins)", fig.scap="(ref:scaption-MR-statins)"}
 include_graphics(path = "figure/Intro_background/MR_statin_example.jpg", dpi = NA)
 ```
-\vspace*{-1em}
-\noindent Figure from Bennett et al.[@Bennett2017].
 
 ## The genetics of obesity
 Mendelian randomization can be used to estimate the causal relationship between a modifiable exposure, such as BMI, and outcomes. There are strong correlations between BMI and more direct measures of fat mass measured by dual-energy X-ray absorptiometry (DXA)[@Bell2018], such as total fat mass index and regional fat mass indices. Due to the specialised equipment needed for fat mass measures, BMI is often much more widely available within cohort studies, trials and in the clinic. Environmental factors are well known to explain a large amount of variance in BMI, but genetic variants also influence BMI. Monogenic obesity was first identified where mutations in the ob (leptin) gene[@Zhang1994] lead to mice having obesity. The first genome-wide association study (GWAS) for obesity traits was performed in 2007 for around 5,000 individuals[@Scuteri2007], which found evidence that 10 SNPs were associated with BMI. Since then, GWAS have been performed in increasingly larger cohort sizes[@Locke2015], with the largest and most recent GWAS performed in 2018 by Yengo et al.[@Yengo2018]. This GWAS found 941 near-independent genetic variants which associate with BMI. These have been shown to explain around 6% of the variance in BMI. Of these SNPs, 656 are considered as primary associations[@Yengo2018].
